# tdigests

./: Cargo.toml  LICENCE  README.md  typos.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: accuracy.rs  simple.rs
src/: lib.rs
